# ros_control_driver_template

./: README.md
demo_robot/arm_description/: CMakeLists.txt  package.xml
demo_robot/arm_description/urdf/arms/generic_arm/: generic_arm.urdf.xacro
demo_robot/arm_description/urdf/grippers/generic_gripper/: generic_gripper.urdf.xacro
demo_robot/arm_description/urdf/robots/generic_arm/: configuration.urdf.xacro  generic_arm_robot.gazebo.xacro  generic_arm_robot.urdf.xacro
demo_robot/arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
demo_robot/arm_moveit_config/config/: generic_arm.srdf  ompl_planning.yaml  ros_controllers.yaml
demo_robot/arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  generic_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
demo_robot/arm_msgs/: CMakeLists.txt  README.md  package.xml
demo_robot/arm_viz/: CMakeLists.txt  package.xml
demo_robot/arm_viz/launch/: rviz.launch  view_robot.launch
demo_robot/arm_viz/rviz/: basic.rviz  view_robot.rviz
doc_data/: generic_driver_diagram.md
driver_bringup/: CMakeLists.txt  package.xml
driver_bringup/config/: real_controllers.yaml  sim_controllers.yaml
driver_bringup/launch/: main_real.launch  main_sim.launch  real_bringup.launch  rosserial.launch  servo_driver.launch  sim_bringup.launch
driver_bringup/src/: clone_of_gazebo_sub_map_pub.cpp  separate_joint_states_pub.cpp
generic_driver/generic_hardware_interface/: CMakeLists.txt  package.xml
generic_driver/generic_hardware_interface/include/generic_hardware_interface/: generic_hw_control_loop.h  generic_hw_interface.h
generic_driver/generic_hardware_interface/src/: generic_hw_control_loop.cpp  generic_hw_interface.cpp  generic_hw_interface_node.cpp
generic_driver/generic_robot_driver/: CMakeLists.txt  package.xml
generic_driver/generic_robot_driver/include/generic_robot_driver/: generic_robot_driver.h
generic_driver/generic_robot_driver/src/: generic_robot_driver.cpp
moveit/moveit_action_handlers/: CMakeLists.txt  README.md  package.xml
moveit/moveit_action_handlers/action/: MoveToJointsMoveIt.action  MoveToPoseMoveIt.action
moveit/moveit_action_handlers/config/: move_joints_arm.yaml  move_joints_gripper.yaml  move_topose_arm.yaml
moveit/moveit_action_handlers/cpp_test_clients/: move_joints_arm_test_client.cpp  move_joints_gripper_test_client.cpp  move_topose_arm_test_client.cpp
moveit/moveit_action_handlers/include/moveit_action_handlers/: move_joints_action_server.h  move_topose_action_server.h
moveit/moveit_action_handlers/launch/: main_moveit_handlers.launch
moveit/moveit_action_handlers/launch/include/: move_joints_arm_action_server.launch  move_joints_gripper_action_server.launch  move_topose_arm_action_server.launch
moveit/moveit_action_handlers/msg/: ActionFeedbackStatusConstants.msg  ActionResultStatusConstants.msg  Pose.msg  PoseStamped.msg  PropertyValuePair.msg
moveit/moveit_action_handlers/nodes/: move_joints_action_server_node.cpp  move_topose_action_server_node.cpp
moveit/moveit_action_handlers/python_test_clients/: move_joints_arm_test_client.py  move_joints_gripper_test_client.py  move_topose_arm_test_client.py
moveit/moveit_action_handlers/src/: move_joints_action_server.cpp  move_topose_action_server.cpp
moveit/moveit_interface/: CMakeLists.txt  package.xml
moveit/moveit_interface/include/moveit_interface/: pick_place_server.h
moveit/moveit_interface/launch/: moveit.launch  pick_place.launch
moveit/moveit_interface/scripts/: arm_teleop  larm_teleop  pos_exec.py
moveit/moveit_interface/src/: pick_place_server.cpp
moveit/moveit_jog_arm/: CMakeLists.txt
moveit/moveit_jog_arm/config/: arm_config.yaml  arm_config_sim.yaml
moveit/moveit_jog_arm/include/moveit_jog_arm/: collision_check_thread.h  jog_arm_data.h  jog_calcs.h  jog_ros_interface.h  low_pass_filter.h
moveit/moveit_jog_arm/launch/: jog_server.launch  jog_server_sim.launch
moveit/moveit_jog_arm/src/: collision_check_thread.cpp  jog_calcs.cpp  jog_ros_interface.cpp  jog_server.cpp  low_pass_filter.cpp
servo_drivers/arduino-rosserial/: arduino_driver.ino
servo_drivers/pwm_test_pub/: CMakeLists.txt  package.xml
servo_drivers/pwm_test_pub/include/pwm_test_pub/: pwm_test_cpp_pub.h
servo_drivers/pwm_test_pub/launch/: pwm_cpp_pub.launch
servo_drivers/pwm_test_pub/nodes/: pub_node.py  pub_once.py  pwm_test_cpp_pub_node.cpp
servo_drivers/pwm_test_pub/src/: pwm_test_cpp_pub.cpp
servo_drivers/ros-pwm-pca9685/pwm_pca9685/src/: pca9685_activity.cpp
servo_drivers/servokit_driver/: CMakeLists.txt  package.xml
servo_drivers/servokit_driver/launch/: pwm_python_pub.launch
servo_drivers/servokit_driver/nodes/: servokit_driver.py
