<?xml version="1.0"?>
<package format="2">
  <name>arm_msgs</name>
  <version>0.1.0</version>
  <description>The arm_msgs package</description>

  <maintainer email="panagiotis.angelakis.robot@gmail.com">panos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>


</package>
