<?xml version="1.0"?>
<package format="2">
  <name>arm_viz</name>
  <version>0.0.0</version>
  <description>The arm_viz package</description>

  <maintainer email="makemelive@todo.todo">makemelive</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
