<?xml version="1.0"?>
<package format="2">
  <name>generic_robot_driver</name>
  <version>0.1.0</version>
  <description>The generic_robot_driver package</description>

  <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>boost</build_depend>

  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>std_msgs</depend>
  <depend>arm_msgs</depend>
  <depend>realtime_tools</depend>

  <export>
  </export>
</package>
