<?xml version="1.0"?>
<package format="2">
  <name>moveit_action_handlers</name>
  <version>0.0.0</version>
  <description>The moveit_action_handlers package</description>

  <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>

  </export>
</package>
