<?xml version="1.0"?>
<package format="2">
  <name>pwm_test_pub</name>
  <version>0.0.0</version>
  <description>The pwm_test_pub package</description>

  <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
  <export>

  </export>
</package>
